--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -27,10 +27,19 @@ $lvt-dark: #181b1e;
 }
 .lvt-card .lvt-data-value{
     margin-bottom: 0px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 .lvt-card .lvt-data-field{
     margin-top: 0px;
     color: $lvt-orange;
+}
+.lvt-card .lvt-img-container{
+    max-width: 100%;
+    position: relative;
+    height: 200px;
+    overflow: hidden;
 }
 .lvt-card .lvt-img{
     max-width: 100%;
