--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -56,3 +56,13 @@ $lvt-dark: #181b1e;
     text-decoration: none;
     color: inherit;
 }
+
+.lvt-bg-gray{
+    background-color: $lvt-gray;
+}
+.lvt-bg-gray2{
+    background-color: $lvt-gray2;
+}
+.lvt-bg-orange{
+    background-color: $lvt-orange;
+}
