--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -66,3 +66,6 @@ $lvt-dark: #181b1e;
 .lvt-bg-orange{
     background-color: $lvt-orange;
 }
+.lvt-btn-account{
+    border: 1px solid $lvt-gray2;
+}
